WIP - first commit for utilisation report

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 <script src="app/device-status/device-status.js"></script>
 <script src="app/instrumental-config/instrumental-config.js"></script>
 <script src="app/activity/activity.js"></script>
+<script src="app/reports/utilisation-report.js"></script>
 <!-- Add New Component JS Above -->
 
 <!--dont use md-whiteframe class because it leaves black artifacts on sidenav-->
