--- a/index.html
+++ b/index.html
@@ -254,6 +254,19 @@
                     </md-item-content>
                 </md-item>
                 <md-item>
+                    <md-item-content class="menu-item-divider" layout="row" layout-align="start center">
+                    </md-item-content>
+                </md-item>
+                <md-item>
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('utilisation-report')">
+                        <md-button flex><span class="fa fa-file-pdf-o"></span><span>Utilisation Report</span></md-button>
+                    </md-item-content>
+                </md-item>
+                <md-item>
+                    <md-item-content class="menu-item-divider" layout="row" layout-align="start center">
+                    </md-item-content>
+                </md-item>
+                <md-item>
                     <md-item-content style="border-bottom: 1px solid #e5e5e5;" class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('weather')">
                         <md-button flex><span class="fa fa-cloud"></span><span>Weather</span></md-button>
                     </md-item-content>
