added report duration element

--- a/app/reports/utilisation-report.html
+++ b/app/reports/utilisation-report.html
@@ -2,7 +2,7 @@
     <md-toolbar md-theme="{{themePrimary}}" class="md-whiteframe-z1" layout="column">
         <div md-theme="{{themePrimaryButtons}}" class="md-toolbar-tools" layout="row" layout-align="start center"
             style="padding: 0">
-            <span style="margin-left: 8px" flex>Report Parameters</span>
+            <span style="margin-left: 8px" flex>Report Duration - {{vm.reportTimeWindowSecondsDurationReadable}} hours</span>
             <div layout="row" layout-align="start center" style="margin: 0 4px; font-size: 14px;">
                 <div layout="row" layout-align="center center" style="min-width: 180px;">
                     <md-input-container flex md-no-float style="height: 36px; max-width: 135px; margin: 0; padding: 0;" title="Start Date 'yyyy-MM-dd HH:mm:ss'">
