reworked scheduling to only allow approved sb's to be scheduled; updated message handling to be inline with new db trigger based notifications

--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -68,7 +68,7 @@
                         <span>Type</span>
                         <span>End Time</span>
                     </div>
-                    <div style="min-width: 8px" ng-show="vm.subarray && $root.elementHasScrollbar('#scheduleCompleteDataRepeat')"></div>
+                    <!-- <div style="min-width: 8px" ng-show="vm.subarray && $root.elementHasScrollbar('#scheduleCompleteDataRepeat')"></div> -->
                 </div>
             </md-toolbar>
 
