--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -30,7 +30,7 @@
                         <span>Type</span>
                         <span>Desired Time</span>
                     </div>
-                    <div style="min-width: 8px" ng-show="subarray && $root.elementHasScrollbar('#scheduleDataRepeat' + subarray.id, false)"></div>
+                    <!-- <div style="min-width: 8px" ng-show="subarray && $root.elementHasScrollbar('#scheduleDataRepeat' + subarray.id, false)"></div> -->
                 </div>
 
             </md-toolbar>
