--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -36,7 +36,7 @@
                                 <span class="fa" ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'desired_start_time' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'desired_start_time' && vm.draftsOrderBy.reverse}" style="margin-right: 4px;"></span>
                             </span>
                         </div>
-                        <div style="min-width: 8px" ng-show="vm.subarray && $root.elementHasScrollbar('#scheduleDraftDataRepeat', true)"></div>
+                        <!-- <div style="min-width: 8px" ng-show="vm.subarray && $root.elementHasScrollbar('#scheduleDraftDataRepeat', true)"></div> -->
                     </div>
                     <md-menu>
                         <md-button class="subarray-config-menu-button" title="Change Subarray" ng-click="$mdOpenMenu(); $event.stopPropagation()"
@@ -58,7 +58,7 @@
                 </md-toolbar>
                 <md-virtual-repeat-container id="scheduleDraftDataRepeat" md-theme="{{themePrimary}}" flex class="md-whiteframe-z2"
                     ng-class="{'maintenance-bg':vm.subarray.maintenance}">
-                    <div md-virtual-repeat="item in vm.scheduleDraftData | filter:{sub_nr:vm.subarray.id, state:'DRAFT'} | orderBy:vm.draftsOrderBy.value:vm.draftsOrderBy.reverse"
+                    <div md-virtual-repeat="item in vm.scheduleDraftData | filter:{sub_nr:vm.subarray.id, state:'APPROVED'} | orderBy:vm.draftsOrderBy.value:vm.draftsOrderBy.reverse"
                         flex layout="row" layout-align="start center" ng-class="{'selected-schedule-row': item === vm.selectedScheduleDraft}"
                         class="schedule-draft-item" layout="column" ng-show="item">
                         <md-progress-linear md-theme="grey" ng-show="item.verification_state === 'VERIFYING'" class="md-primary progress-bar-fill"
@@ -126,13 +126,13 @@
                 [esc] to clear selection, [enter] to assign sb's
             </md-tooltip>
             <div layout="row" class="unselectable md-toolbar-tools">
-                <span flex>Drafts</span>
+                <span flex>Approved</span>
                 <input class="fade-in search-input-box" type="search" ng-model-options="{ debounce: 300 }" ng-model="vm.q"
-                    placeholder="Search Drafts..." />
+                    placeholder="Search Approved..." />
             </div>
         </md-toolbar>
         <md-virtual-repeat-container flex>
-            <div md-virtual-repeat="item in vm.scheduleDraftData | filter:{sub_nr:null} | regexSearch:vm.draftsOrderByFields:vm.q | orderBy:id_code:true"
+            <div md-virtual-repeat="item in vm.scheduleDraftData | filter:{sub_nr:null, state:'APPROVED'} | regexSearch:vm.draftsOrderByFields:vm.q | orderBy:id_code:true"
                 title="{{item.id_code}} - {{item.description}} - {{item.type}} - {{item.desired_start_time}}"
                 ng-class="{'selected-resource-item': item.selected}" class="schedule-draft-item" layout="row"
                 layout-align="start center" ng-mousedown="vm.dragSelect = true; vm.dragSelectUnselect = item.selected; vm.toggleSBSelect(item)"
