--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             <md-button flex><span class="fa fa-list"></span><span>Subarrays Workflow</span></md-button>
                         </div>
                         <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('scheduler.drafts')">
-                            <md-button flex><span class="fa fa-pencil"></span><span>Schedule Block Drafts</span></md-button>
+                            <md-button flex><span class="fa fa-pencil"></span><span>Schedule Block Approved</span></md-button>
                         </div>
                         <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('scheduler.program-blocks')">
                             <md-button flex><span class="fa fa-pencil"></span><span>Program Blocks</span></md-button>
