--- a/app/scheduler/program-blocks/program-block-view.html
+++ b/app/scheduler/program-blocks/program-block-view.html
@@ -3,7 +3,7 @@
         layout="row" layout-align="center center">
         <div ng-include="'app/scheduler/templates/pb-view-header.html'"></div>
     </md-toolbar>
-    <md-virtual-repeat-container flex class="md-whiteframe-z1">
+    <md-virtual-repeat-container flex class="md-whiteframe-z1" md-theme="{{$root.themePrimaryButtons}}">
         <div md-virtual-repeat="pb in vm.programBlocks" class="pb-view-item" layout="row" ng-init="pb.showSBList = false"
             layout-align="start center" style="cursor: pointer" ng-click="pb.showSBList = !pb.showSBList">
             <div layout="column" layout-align="center start" class="pb-id-container" ng-click="$root.showSBDetails(pb, $event, 'Program Block: ' + pb.pb_id)">
@@ -13,12 +13,22 @@
             <span flex class="sb-wrapped-description" style="height: initial">
                 {{pb.description}}
             </span>
-            <span style="min-width: 80px">{{pb.schedule_blocks.length}}</span>
+            <span style="max-width: 300px; min-width: 300px; margin-right: 8px; overflow: auto; text-overflow: ellipsis" title="{{pb.obs_spec}}">{{pb.obs_spec}}</span>
+            <span style="min-width: 80px; margin-right: 8px">{{pb.schedule_blocks.length}}</span>
             <span style="min-width: 80px">{{pb.state}}</span>
             <div layout="column" layout-align="center" class="sb-time-and-type-div" style="margin-left: 4px; min-width: 148px">
                 <span>{{pb.desired_lst_start_time}}</span>
                 <span>{{pb.desired_start_time}}</span>
             </div>
+            <md-menu>
+                <span class="icon-button fa fa-ellipsis-v" md-ink-ripple ng-click="$mdOpenMenu(); $event.stopPropagation()"></span>
+                <md-menu-content style="max-height: 475px">
+                    <md-menu-item ng-repeat="sub_nr in $root.systemConfig.subarrayNrs">
+                        <md-button ng-click="parent.vm.setupSubarrayFromPB(sub_nr, pb.id, $event)" title="Setup subarray {{sub_nr}} using this observation specification and schedule block list">
+                            Setup Subarray {{sub_nr}} with this PB</md-button>
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
         </div>
     </md-virtual-repeat-container>
 </div>
