removed test button

--- a/app/scheduler/program-blocks/program-block-view.html
+++ b/app/scheduler/program-blocks/program-block-view.html
@@ -13,7 +13,7 @@
             <span flex class="sb-wrapped-description" style="height: initial">
                 {{pb.description}}
             </span>
-            <span style="max-width: 300px; min-width: 300px; margin-right: 8px; overflow: auto; text-overflow: ellipsis" title="{{pb.obs_spec}}">{{pb.obs_spec}}</span>
+            <span style="max-width: 300px; min-width: 300px; margin-right: 8px; overflow: auto;" title="{{pb.obs_spec}}">{{pb.obs_spec}}</span>
             <span style="min-width: 80px; margin-right: 8px">{{pb.schedule_blocks.length}}</span>
             <span style="min-width: 80px">{{pb.state}}</span>
             <div layout="column" layout-align="center" class="sb-time-and-type-div" style="margin-left: 4px; min-width: 148px">
