--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -83,6 +83,12 @@
                             <md-menu-item>
                                 <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="parent.vm.cloneSB(item)">Clone SB</md-button>
                             </md-menu-item>
+                            <md-menu-item>
+                                <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="parent.vm.cloneSBIntoPBDialog($event, item)" title="Clone Schedule Block into a Program Block">Clone SB Into PB...</md-button>
+                            </md-menu-item>
+                            <md-menu-item>
+                                <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="parent.vm.moveSBIntoPBDialog($event, item)" title="Move Schedule Block to a Program Block">Move SB to PB...</md-button>
+                            </md-menu-item>
                         </md-menu-content>
                     </md-menu>
                 </div>
